Add bibs from production

--- a/publications/kelly-tpdl2016.bib
+++ b/publications/kelly-tpdl2016.bib
@@ -8,5 +8,5 @@
   MONTH = {June },
   PDF = { http://www.cs.odu.edu/~mkelly/papers/2016_tpdl_ipwb.pdf },
   PAGES = {411--416},
-  DOU = {10.1007/978-3-319-43997-6_35}
+  DOI = {10.1007/978-3-319-43997-6_35}
 }
