--- a/publications/berlin-jcdl2017.bib
+++ b/publications/berlin-jcdl2017.bib
@@ -1,5 +1,5 @@
 @INPROCEEDINGS { berlin-jcdl2017,
-    AUTHOR = { John A. Berlin, Mat Kelly, Michael L. Nelson, and Michele C. Weigle },
+    AUTHOR = { John A. Berlin and Mat Kelly and Michael L. Nelson and and Michele C. Weigle },
     TITLE = {{WAIL: Collection-Based Personal Web Archiving}},
     BOOKTITLE = { Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL) },
     YEAR = { 2017 },
