Add IMLS grant ftw

--- a/publications/alam-jcdl2016.bib
+++ b/publications/alam-jcdl2016.bib
@@ -1,12 +1,12 @@
-@INPROCEEDINGS { alam-jcdl2016,
-    AUTHOR = { Sawood Alam and Mat Kelly and Michael L. Nelson },
-    TITLE = {{InterPlanetary Wayback: The Permanent Web Archive}},
-    BOOKTITLE = { Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL) },
-    YEAR = { 2016 },
-    PUBDATE = { 201606 },
-    ADDRESS = { Newark },
-    MONTH = { June },
-    PDF = { http://www.cs.odu.edu/~mkelly/papers/2016_jcdl_ipwb.pdf },
-    PAGES = {273-274},
-    DOI = {10.1145/2910896.2925467}
+@inproceedings{alam-jcdl2016,
+  author        = {Sawood Alam and Mat Kelly and Michael L. Nelson},
+  title         = {{InterPlanetary Wayback: The Permanent Web Archive}},
+  booktitle     = {Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL)},
+  year          = {2016},
+  pubdate       = {201606},
+  address       = {Newark},
+  month         = {June},
+  pdf           = {https://matkelly.com/papers/2016\_jcdl\_ipwb.pdf},
+  pages         = {273--274},
+  doi           = {10.1145/2910896.2925467}
 }
