--- a/publications/alam-jcdl2018.bib
+++ b/publications/alam-jcdl2018.bib
@@ -1,12 +1,12 @@
-@INPROCEEDINGS { alam-jcdl2018,
-    AUTHOR = { Alam, Sawood and Kelly, Mat and Weigle, Michele C. and Nelson, Michael L.},
-    TITLE = {{Unobtrusive and Extensible Archival Replay Banners Using Custom Elements}},
-    BOOKTITLE = { Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL) },
-    YEAR = { 2018 },
-    PUBDATE = { 201806 },
-    ADDRESS = { Fort Worth, Texas },
-    MONTH = { June },
-    PDF = { http://www.cs.odu.edu/~mkelly/papers/2018_jcdl_banners.pdf },
-    PAGES = {319-320},
-    DOI = {10.1145/3197026.3203881}
+@inproceedings{alam-jcdl2018,
+  author        = {Sawood Alam and Mat Kelly and Michele C. Weigle and Michael L. Nelson},
+  title         = {{Unobtrusive and Extensible Archival Replay Banners Using Custom Elements}},
+  booktitle     = {Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL)},
+  year          = {2018},
+  pubdate       = {201806},
+  address       = {Fort Worth, Texas},
+  month         = {June},
+  pdf           = {https://matkelly.com/papers/2018\_jcdl\_banners.pdf},
+  pages         = {319--320},
+  doi           = {10.1145/3197026.3203881}
 }
