--- a/publications/alam-tcdl2017.bib
+++ b/publications/alam-tcdl2017.bib
@@ -1,11 +1,11 @@
-@ARTICLE { alam-tcdl2017,
-    AUTHOR = { Sawood Alam and Mat Kelly and Michele C. Weigle and Michael L. Nelson },
-    TITLE = { A InterPlanetary Wayback: The Permanent Web Archive },
-    JOURNAL = { Bulletin of IEEE Technical Committee on Digital Libraries },
-    VOLUME = { 13 },
-    NUMBER = { 1 },
-    PUBDATE = { 201704 },
-    YEAR = { 2017 },
-    MONTH = { April },
-    PUBLISHER = { IEEE Technical Committee on Digital Libraries },
+@article{alam-tcdl2017,
+  author        = {Sawood Alam and Mat Kelly and Michele C. Weigle and Michael L. Nelson},
+  title         = {InterPlanetary Wayback: The Permanent Web Archive},
+  journal       = {Bulletin of IEEE Technical Committee on Digital Libraries},
+  volume        = {13},
+  number        = {1},
+  pubdate       = {201704},
+  year          = {2017},
+  month         = {April},
+  publisher     = {IEEE Technical Committee on Digital Libraries}
 }
