--- a/publications/berlin-jcdl2017.bib
+++ b/publications/berlin-jcdl2017.bib
@@ -1,12 +1,12 @@
-@INPROCEEDINGS { berlin-jcdl2017,
-    AUTHOR = { John A. Berlin and Mat Kelly and Michael L. Nelson and and Michele C. Weigle },
-    TITLE = {{WAIL: Collection-Based Personal Web Archiving}},
-    BOOKTITLE = { Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL) },
-    YEAR = { 2017 },
-    PUBDATE = { 201706 },
-    ADDRESS = { Toronto, Canada },
-    MONTH = { June },
-    PDF = { http://www.cs.odu.edu/~mkelly/papers/2017_jcdl_wail.pdf },
-    PAGES = {340-341},
-    DOI = {10.1109/JCDL.2017.7991619}
+@inproceedings{berlin-jcdl2017,
+  author        = {John A. Berlin and Mat Kelly and Michael L. Nelson and and Michele C. Weigle},
+  title         = {{WAIL: Collection-Based Personal Web Archiving}},
+  booktitle     = {Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL)},
+  year          = {2017},
+  pubdate       = {201706},
+  address       = {Toronto, Canada},
+  month         = {June},
+  pdf           = {https://matkelly.com/papers/2017\_jcdl\_wail.pdf},
+  pages         = {340--341},
+  doi           = {10.1109/JCDL.2017.7991619}
 }
