--- a/publications/brunelle-dl2014.bib
+++ b/publications/brunelle-dl2014.bib
@@ -1,15 +1,14 @@
-@INPROCEEDINGS { brunelle-dl2014,
-    AUTHOR = { Justin Brunelle and Mat Kelly and Hany SalahEldeen and Michele C. Weigle and Michael L. Nelson },
-    TITLE = { Not All Mementos Are Created Equal: Measuring the Impact of Missing Resources },
-    BOOKTITLE = { Proceedings of ACM/IEEE Digital Libraries (DL) },
-    YEAR = { 2014 },
-    PUBDATE = { 201409 },
-    ADDRESS = { London },
-    MONTH = { September },
-    NOTE = { Best Student Paper Award },
-    KEYWORD = { award },
-    PDF = { http://www.cs.odu.edu/~mln/pubs/jcdl-2014/jcdl-2014-brunelle-damage.pdf },
-    PAGES = {321--330},
-    DOI = {10.1109/JCDL.2014.6970187},
-    NOTE= {29% acceptance rate}
+@inproceedings{brunelle-dl2014,
+  author        = {Justin Brunelle and Mat Kelly and Hany SalahEldeen and Michele C. Weigle and Michael L. Nelson},
+  title         = {Not All Mementos Are Created Equal: Measuring the Impact of Missing Resources},
+  booktitle     = {Proceedings of ACM/IEEE Digital Libraries (DL)},
+  year          = {2014},
+  pubdate       = {201409},
+  address       = {London},
+  month         = {September},
+  note          = {Best Student Paper Award},
+  keyword       = {award},
+  pdf           = {https://matkelly.com/papers/jcdl-2014-brunelle-damage.pdf},
+  pages         = {321--330},
+  doi           = {10.1109/JCDL.2014.6970187}
 }
