--- a/publications/brunelle-ijdl2015-damage.bib
+++ b/publications/brunelle-ijdl2015-damage.bib
@@ -1,13 +1,13 @@
-@ARTICLE{ brunelle-ijdl2015-damage,
-    AUTHOR={Brunelle, Justin F. and Kelly, Mat and Weigle, Michele C. and Nelson, Michael L.},
-    TITLE={Not All Mementos Are Created Equal: Measuring the Impact of Missing Resources},
-    YEAR={2015},
-    MONTH={May},
-    JOURNAL={International Journal on Digital Libraries},
-    DOI={10.1007/s00799-015-0150-6},
-    URL={http://link.springer.com/article/10.1007/s00799-015-0150-6},
-    PUBLISHER={Springer Berlin Heidelberg},
-    VOLUME={16},
-    ISSUE={3},
-    PAGES={283--301}
+@article{brunelle-ijdl2015-damage,
+  author        = {Justin F. Brunelle and Mat Kelly and Michele C. Weigle and Michael L. Nelson},
+  title         = {Not All Mementos Are Created Equal: Measuring the Impact of Missing Resources},
+  year          = {2015},
+  month         = {May},
+  journal       = {International Journal on Digital Libraries},
+  doi           = {10.1007/s00799-015-0150-6},
+  url           = {http://link.springer.com/article/10.1007/s00799-015-0150-6},
+  publisher     = {Springer Berlin Heidelberg},
+  volume        = {16},
+  issue         = {3},
+  pages         = {283--301}
 }
