--- a/publications/kelly-arXiv2017.bib
+++ b/publications/kelly-arXiv2017.bib
@@ -1,11 +1,11 @@
-@ARTICLE{kelly-arXiv2017,
-  author = {Mat Kelly, Lulwah M. Alkwai, Michael L. Nelson, Michele C. Weigle, and {Herbert Van de Sompel}},
-  title = "{Impact of URI Canonicalization on Memento Count}",
-  journal = {ArXiv e-prints},
-  archivePrefix = "arXiv",
-  eprint = {1703.03302},
-  primaryClass = "cs.DL",
-  keywords = {Computer Science - Digital Libraries},
-  year = 2017,
-  month = {March}
+@article{kelly-arXiv2017,
+  author        = {Mat Kelly and Lulwah M. Alkwai and Michael L. Nelson and Michele C. Weigle, and {Herbert Van de Sompel}},
+  title         = "{Impact of URI Canonicalization on Memento Count}",
+  journal       = {ArXiv e-prints},
+  archiveprefix = "arXiv",
+  eprint        = {1703.03302},
+  primaryclass  = "cs.DL",
+  keywords      = {Computer Science - Digital Libraries},
+  year          = 2017,
+  month         = {March}
 }
