--- a/publications/kelly-dl2014-mink.bib
+++ b/publications/kelly-dl2014-mink.bib
@@ -1,11 +1,11 @@
-@INPROCEEDINGS { kelly-dl2014-mink,
-    AUTHOR = { Mat Kelly, Michael L. Nelson, and Michele C. Weigle },
-    TITLE = {{ Mink: Integrating the Live and Archived Web Viewing Experience Using Web Browsers and Memento }},
-    BOOKTITLE = { Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL) },
-    YEAR = { 2014 },
-    MONTH = { September },
-    ADDRESS = { London, England },
-    PAGES = {469--470},
-    DOI = {10.1109/JCDL.2014.6970229},
-    PDF = { http://www.cs.odu.edu/~mkelly/papers/2014_dl_mink.pdf }
+@inproceedings{kelly-dl2014-mink,
+  author        = {Mat Kelly and Michael L. Nelson, and Michele C. Weigle},
+  title         = {{ Mink: Integrating the Live and Archived Web Viewing Experience Using Web Browsers and Memento }},
+  booktitle     = {Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL)},
+  year          = {2014},
+  month         = {September},
+  address       = {London, England},
+  pages         = {469--470},
+  doi           = {10.1109/JCDL.2014.6970229},
+  pdf           = {https://matkelly.com/papers/2014\_dl\_mink.pdf}
 }
