--- a/publications/kelly-jcdl2012.bib
+++ b/publications/kelly-jcdl2012.bib
@@ -1,12 +1,12 @@
-@INPROCEEDINGS { kelly-jcdl2012,
-    AUTHOR = { Mat Kelly and Michele C. Weigle },
-    TITLE = { WARCreate - Create Wayback-Consumable WARC Files from Any Webpage (demo) },
-    BOOKTITLE = { Proceedings of the ACM/IEEE Joint Conference on Digital Libraries (JCDL) },
-    YEAR = { 2012 },
-    MONTH = { June },
-    ADDRESS = { Washington, DC },
-    PAGES = { 437--438 },
-    DOI = { 10.1145/2232817.2232930 },
-    PUBDATE = { 201206 },
-    PDF = { http://www.cs.odu.edu/~mkelly/papers/2012_jcdl_warcreate.pdf }
+@inproceedings{kelly-jcdl2012,
+  author        = {Mat Kelly and Michele C. Weigle},
+  title         = {WARCreate - Create Wayback-Consumable WARC Files from Any Webpage (demo)},
+  booktitle     = {Proceedings of the ACM/IEEE Joint Conference on Digital Libraries (JCDL)},
+  year          = {2012},
+  month         = {June},
+  address       = {Washington, DC},
+  pages         = {437--438},
+  doi           = {10.1145/2232817.2232930},
+  pubdate       = {201206},
+  pdf           = {https://matkelly.com/papers/2012\_jcdl\_warcreate.pdf}
 }
