--- a/publications/kelly-jcdl2017.bib
+++ b/publications/kelly-jcdl2017.bib
@@ -1,12 +1,12 @@
-@INPROCEEDINGS { kelly-jcdl2017,
-    AUTHOR = { Mat Kelly, Lulwah M. Alkwai, Sawood Alam, Michael L. Nelson, Michele C. Weigle, and Herbert Van de Sompel },
-    TITLE = {{Impact of URI Canonicalization on Memento Count}},
-    BOOKTITLE = { Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL) },
-    YEAR = { 2017 },
-    PUBDATE = { 201706 },
-    ADDRESS = { Toronto, Canada },
-    MONTH = { June },
-    PDF = { http://www.cs.odu.edu/~mkelly/papers/2017_jcdl_countingMementos.pdf },
-    PAGES = {303-304},
-    DOI = {10.1109/JCDL.2017.7991601}
+@inproceedings{kelly-jcdl2017,
+  author        = {Mat Kelly and Lulwah M. Alkwai and Sawood Alam and Michael L. Nelson and Michele C. Weigle, and Herbert Van de Sompel},
+  title         = {{Impact of URI Canonicalization on Memento Count}},
+  booktitle     = {Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL)},
+  year          = {2017},
+  pubdate       = {201706},
+  address       = {Toronto, Canada},
+  month         = {June},
+  pdf           = {https://matkelly.com/papers/2017\_jcdl\_countingMementos.pdf},
+  pages         = {303--304},
+  doi           = {10.1109/JCDL.2017.7991601}
 }
