--- a/publications/kelly-jcdl2018.bib
+++ b/publications/kelly-jcdl2018.bib
@@ -1,12 +1,12 @@
-@INPROCEEDINGS { kelly-jcdl2018,
-    AUTHOR = { Kelly, Mat and Nelson, Michael L. and Weigle, Michele C. },
-    TITLE = {{A Framework for Aggregating Private and Public Web Archives}},
-    BOOKTITLE = { Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL) },
-    YEAR = { 2018 },
-    PUBDATE = { 201806 },
-    ADDRESS = { Fort Worth, Texas },
-    MONTH = { June },
-    PDF = { http://www.cs.odu.edu/~mkelly/papers/2018_jcdl_hierarchy.pdf },
-    PAGES = {273-282},
-    DOI = {10.1145/3197026.3197045}
+@inproceedings{kelly-jcdl2018,
+  author        = {Mat Kelly and Michael L.  Nelson and Michele C. Weigle},
+  title         = {{A Framework for Aggregating Private and Public Web Archives}},
+  booktitle     = {Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL)},
+  year          = {2018},
+  pubdate       = {201806},
+  address       = {Fort Worth, Texas},
+  month         = {June},
+  pdf           = {https://matkelly.com/papers/2018\_jcdl\_hierarchy.pdf},
+  pages         = {273--282},
+  doi           = {10.1145/3197026.3197045}
 }
