--- a/publications/kelly-pda2013.bib
+++ b/publications/kelly-pda2013.bib
@@ -1,9 +1,9 @@
-@MISC { kelly-pda2013,
-    AUTHOR = { Mat Kelly and Michael L. Nelson and Michele C. Weigle },
-    TITLE = { Making Enterprise-Level Archive Tools Accessible for Personal Web Archiving Using XAMPP },
-    HOWPUBLISHED = { Poster and demo presented at Personal Digital Archiving },
-    YEAR = { 2013 },
-    MONTH = { February },
-    ADDRESS = { College Park, MD },
-    PUBDATE = { 201302 },
+@misc{kelly-pda2013,
+  author        = {Mat Kelly and Michael L. Nelson and Michele C. Weigle},
+  title         = {Making Enterprise-Level Archive Tools Accessible for Personal Web Archiving Using XAMPP},
+  howpublished  = {Poster and demo presented at Personal Digital Archiving},
+  year          = {2013},
+  month         = {February},
+  address       = {College Park, MD},
+  pubdate       = {201302}
 }
