--- a/publications/kelly-tcdl2015.bib
+++ b/publications/kelly-tcdl2015.bib
@@ -1,11 +1,11 @@
-@ARTICLE { kelly-tcdl2015,
-    AUTHOR = { Kelly, Mat},
-    TITLE = { A Framework for Aggregating Private and Public Web Archives },
-    JOURNAL = { Bulletin of IEEE Technical Committee on Digital Libraries },
-    VOLUME = { 11 },
-    NUMBER = { 3 },
-    PUBDATE = { 201512 },
-    YEAR = { 2015 },
-    MONTH = { December },
-    PUBLISHER = { IEEE Technical Committee on Digital Libraries },
+@article{kelly-tcdl2015,
+  author        = {Mat Kelly},
+  title         = {A Framework for Aggregating Private and Public Web Archives},
+  journal       = {Bulletin of IEEE Technical Committee on Digital Libraries},
+  volume        = {11},
+  number        = {3},
+  pubdate       = {201512},
+  year          = {2015},
+  month         = {December},
+  publisher     = {IEEE Technical Committee on Digital Libraries}
 }
