--- a/publications/kelly-tpdl2013.bib
+++ b/publications/kelly-tpdl2013.bib
@@ -1,14 +1,14 @@
-@INPROCEEDINGS { kelly-tpdl2013,
-    AUTHOR = { Mat Kelly and Justin Brunelle and Michele C. Weigle and Michael L. Nelson },
-    TITLE = { On the Change in Archivability of Websites Over Time },
-    BOOKTITLE = { Proceedings of the International Conference on Theory and Practice of Digital Libraries (TPDL) },
-    YEAR = { 2013 },
-    PUBDATE = { 201309 },
-    ADDRESS = { Valletta, Malta },
-    MONTH = { September },
-    PAGES = { 35--47 },
-    ARXIV = { http://arxiv.org/abs/1307.8067 },
-    AR = { acceptance: 24% (24/101) },
-    DOI = { 10.1007/978-3-642-40501-3_5 },
-    PDF = { http://www.cs.odu.edu/~mkelly/papers/2013_tpdl_archivabilityOverTime_final.pdf }
+@inproceedings{kelly-tpdl2013,
+  author        = {Mat Kelly and Justin Brunelle and Michele C. Weigle and Michael L. Nelson},
+  title         = {On the Change in Archivability of Websites Over Time},
+  booktitle     = {Proceedings of the International Conference on Theory and Practice of Digital Libraries (TPDL)},
+  year          = {2013},
+  pubdate       = {201309},
+  address       = {Valletta, Malta},
+  month         = {September},
+  pages         = {35--47},
+  arxiv         = {http://arxiv.org/abs/1307.8067},
+  ar            = {acceptance: 24\% (24/101)},
+  doi           = {10.1007/978-3-642-40501-3\_5},
+  pdf           = {https://matkelly.com/papers/2013\_tpdl\_archivabilityOverTime\_final.pdf}
 }
