--- a/publications/kelly-vis2013.bib
+++ b/publications/kelly-vis2013.bib
@@ -1,10 +1,10 @@
-@INPROCEEDINGS { kelly-ieeevis2013,
-    AUTHOR = { Mat Kelly, Michael Nelson, and Michele C. Weigle },
-    TITLE = { Graph-Based Navigation of a Box Office Prediction System },
-    BOOKTITLE = { Proceedings of the IEEE VIS 2013},
-    YEAR = { 2013 },
-    MONTH = { October },
-    ADDRESS = { Atlanta, GA },
-    PUBDATE = { 201310 },
-    PDF = { http://www.cs.odu.edu/~mkelly/papers/2013_ieeevis_boxofficeprediction.pdf }
+@inproceedings{kelly-ieeevis2013,
+  author        = {Mat Kelly and Michael Nelson and Michele C. Weigle},
+  title         = {Graph-Based Navigation of a Box Office Prediction System},
+  booktitle     = {Proceedings of the IEEE VIS 2013},
+  year          = {2013},
+  month         = {October},
+  address       = {Atlanta, GA},
+  pubdate       = {201310},
+  pdf           = {https://matkelly.com/papers/2013\_ieeevis\_boxofficeprediction.pdf}
 }
