--- a/publications/kelly-vsgc2015.bib
+++ b/publications/kelly-vsgc2015.bib
@@ -1,11 +1,10 @@
-@ARTICLE { kelly-vsgc2015,
-    AUTHOR = {Mat Kelly},
-    TITLE = { Facilitation of the A Posteriori Replication of Web Published Satellite Imagery },
-    BOOKTITLE = { Virginia Space Grant Consortium 2015 Student Research Conference},
-    YEAR = { 2015 },
-    MONTH = { April },
-    PUBDATE = { 20150417 },
-    ADDRESS = { Hampton, Virginia },
-    MONTH = { April },
-    PDF = { http://www.cs.odu.edu/~mkelly/papers/2015_vsgc_imagery.pdf }
+@article{kelly-vsgc2015,
+  author        = {Mat Kelly},
+  title         = {Facilitation of the A Posteriori Replication of Web Published Satellite Imagery},
+  booktitle     = {Virginia Space Grant Consortium 2015 Student Research Conference},
+  year          = {2015},
+  month         = {April},
+  pubdate       = {20150417},
+  address       = {Hampton, Virginia},
+  pdf           = {https://matkelly.com/papers/2015\_vsgc\_imagery.pdf}
 }
