--- a/publications/ruffing-milcom2014.bib
+++ b/publications/ruffing-milcom2014.bib
@@ -1,11 +1,11 @@
-@INPROCEEDINGS { ruffing-milcom2014,
-    AUTHOR = { Michael Ruffing and Yang He and Jason Hallstrom and Mat Kelly and Stephan Olariu and Michele C. Weigle },
-    TITLE = { A Retasking Framework For Wireless Sensor Networks },
-    BOOKTITLE = { Proceedings of the Military Communications Conference (MILCOM) },
-    YEAR = { 2014 },
-    ADDRESS = { Baltimore, MD },
-    PUBDATE = { 201410 },
-    MONTH = { October },
-    PAGES = { 1066--1071},
-    PDF = { http://www.cs.odu.edu/~mkelly/papers/2014_milcom_retasking.pdf }
+@inproceedings{ruffing-milcom2014,
+  author        = {Michael Ruffing and Yang He and Jason Hallstrom and Mat Kelly and Stephan Olariu and Michele C. Weigle},
+  title         = {A Retasking Framework For Wireless Sensor Networks},
+  booktitle     = {Proceedings of the Military Communications Conference (MILCOM)},
+  year          = {2014},
+  address       = {Baltimore, MD},
+  pubdate       = {201410},
+  month         = {October},
+  pages         = {1066--1071},
+  pdf           = {https://matkelly.com/papers/2014\_milcom\_retasking.pdf}
 }
