--- a/publications/alam-jcdl2017.bib
+++ b/publications/alam-jcdl2017.bib
@@ -1,12 +1,12 @@
-@INPROCEEDINGS { alam-jcdl2017,
-    AUTHOR = { Sawood Alam, Mat Kelly, Michele C. Weigle, and Michael L. Nelson },
-    TITLE = {{Client-side Reconstruction of Composite Mementos Using ServiceWorker}},
-    BOOKTITLE = { Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL) },
-    YEAR = { 2017 },
-    PUBDATE = { 201706 },
-    ADDRESS = { Toronto, Canada },
-    MONTH = { June },
-    PDF = { http://www.cs.odu.edu/~mkelly/papers/2017_jcdl_serviceWorker.pdf },
-    PAGES = {237-240},
-    DOI = {10.1109/JCDL.2017.7991579}
+@inproceedings{alam-jcdl2017,
+  author        = {Sawood Alam and Mat Kelly and Michele C. Weigle, and Michael L. Nelson},
+  title         = {{Client-side Reconstruction of Composite Mementos Using ServiceWorker}},
+  booktitle     = {Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL)},
+  year          = {2017},
+  pubdate       = {201706},
+  address       = {Toronto, Canada},
+  month         = {June},
+  pdf           = {https://matkelly.com/papers/2017\_jcdl\_serviceWorker.pdf},
+  pages         = {237--240},
+  doi           = {10.1109/JCDL.2017.7991579}
 }
