--- a/publications/aturban-jcdl2018.bib
+++ b/publications/aturban-jcdl2018.bib
@@ -1,12 +1,12 @@
-@INPROCEEDINGS { aturban-jcdl2018,
-    AUTHOR = { Aturban, Mohamed and Kelly, Mat and Alam, Sawood and Berlin, John A. and Nelson, Michael L. and Weigle, Michele C.},
-    TITLE = {{ArchiveNow: Simplified, Extensible, Multi-Archive Preservation}},
-    BOOKTITLE = { Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL) },
-    YEAR = { 2018 },
-    PUBDATE = { 201806 },
-    ADDRESS = { Fort Worth, Texas },
-    MONTH = { June },
-    PDF = { http://www.cs.odu.edu/~mkelly/papers/2018_jcdl_archivenow.pdf },
-    PAGES = {321-322},
-    DOI = {10.1145/3197026.3203880}
+@inproceedings{aturban-jcdl2018,
+  author        = {Mohamed Aturban and  Mat Kelly and Sawood Alam and John A. Berlin and Michael L. Nelson and Michele C. Weigle},
+  title         = {{ArchiveNow: Simplified, Extensible, Multi-Archive Preservation}},
+  booktitle     = {Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL)},
+  year          = {2018},
+  pubdate       = {201806},
+  address       = {Fort Worth, Texas},
+  month         = {June},
+  pdf           = {https://matkelly.com/papers/2018\_jcdl\_archivenow.pdf},
+  pages         = {321--322},
+  doi           = {10.1145/3197026.3203880}
 }
