--- a/publications/brunelle-ijdl2015-impact.bib
+++ b/publications/brunelle-ijdl2015-impact.bib
@@ -1,13 +1,13 @@
-@ARTICLE{ brunelle-ijdl2015-impact,
-    AUTHOR={Brunelle, Justin F. and Kelly, Mat and Weigle, Michele C. and Nelson, Michael L.},
-    TITLE={The Impact of JavaScript on Archivability},
-    YEAR={2016},
-    VOLUME={17},
-    NUMBER={2},
-    MONTH={June},
-    JOURNAL={International Journal on Digital Libraries},
-    DOI={10.1007/s00799-015-0140-8},
-    URL={http://dx.doi.org/10.1007/s00799-015-0140-8},
-    PUBLISHER={Springer Berlin Heidelberg},
-    PAGES={1--23}
+@article{brunelle-ijdl2015-impact,
+  author        = {Justin F. Brunelle and Mat Kelly and Michele C. Weigle and Michael L. Nelson},
+  title         = {The Impact of JavaScript on Archivability},
+  year          = {2016},
+  volume        = {17},
+  number        = {2},
+  month         = {June},
+  journal       = {International Journal on Digital Libraries},
+  doi           = {10.1007/s00799-015-0140-8},
+  url           = {http://dx.doi.org/10.1007/s00799-015-0140-8},
+  publisher     = {Springer Berlin Heidelberg},
+  pages         = {1--23}
 }
