--- a/publications/jordan-jcdl2015.bib
+++ b/publications/jordan-jcdl2015.bib
@@ -1,14 +1,14 @@
-@INPROCEEDINGS { jordan-jcdl2015,
-    AUTHOR = { Wesley Jordan and Mat Kelly and Justin F. Brunelle and Laura Vobrak and Michele C. Weigle and Michael L. Nelson },
-    TITLE = { Mobile Mink: Merging Mobile and Desktop Archived Webs },
-    BOOKTITLE = { Proceedings of the ACM/IEEE Joint Conference on Digital Libraries (JCDL) },
-    YEAR = { 2015 },
-    MONTH = { June },
-    NOTE = { Best Poster Award },
-    KEYWORD = { award },
-    PDF = {http://www.cs.odu.edu/~mkelly/papers/2015_jcdl_mobileMink.pdf },
-    ADDRESS = { Knoxville, TN },
-    PUBDATE = { 201506 },
-    PAGES={243--244},
-    DOI = {10.1145/2756406.2756956}
+@inproceedings{jordan-jcdl2015,
+  author        = {Wesley Jordan and Mat Kelly and Justin F. Brunelle and Laura Vobrak and Michele C. Weigle and Michael L. Nelson},
+  title         = {Mobile Mink: Merging Mobile and Desktop Archived Webs},
+  booktitle     = {Proceedings of the ACM/IEEE Joint Conference on Digital Libraries (JCDL)},
+  year          = {2015},
+  month         = {June},
+  note          = {Best Poster Award},
+  keyword       = {award},
+  pdf           = {https://matkelly.com/papers/2015\_jcdl\_mobileMink.pdf},
+  address       = {Knoxville, TN},
+  pubdate       = {201506},
+  pages         = {243--244},
+  doi           = {10.1145/2756406.2756956}
 }
