--- a/publications/kelly-dl2014-acid.bib
+++ b/publications/kelly-dl2014-acid.bib
@@ -1,12 +1,12 @@
-@INPROCEEDINGS { kelly-dl2014-acid,
-    AUTHOR = { Mat Kelly, Michael L. Nelson, Michele C. Weigle },
-    TITLE = {{ The Archival Acid Test: Evaluating Archive Performance on Advanced HTML and JavaScript }},
-    BOOKTITLE = { Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL) },
-    YEAR = { 2014 },
-    MONTH = { September },
-    ADDRESS = { London, England },
-    PAGES = {25--28},
-    DOI = {10.1109/JCDL.2014.6970146},
-    NOTE = {32% acceptance rate},
-    PDF = { http://www.cs.odu.edu/~mkelly/papers/2014_dl_acid.pdf }
+@inproceedings{kelly-dl2014-acid,
+  author        = {Mat Kelly and Michael L. Nelson and Michele C. Weigle},
+  title         = {{ The Archival Acid Test: Evaluating Archive Performance on Advanced HTML and JavaScript }},
+  booktitle     = {Proceedings of the IEEE/ACM Joint Conference on Digital Libraries (JCDL)},
+  year          = {2014},
+  month         = {September},
+  address       = {London, England},
+  pages         = {25--28},
+  doi           = {10.1109/JCDL.2014.6970146},
+  note          = {32\% acceptance rate},
+  pdf           = {https://matkelly.com/papers/2014\_dl\_acid.pdf}
 }
