--- a/publications/kelly-dlib2013.bib
+++ b/publications/kelly-dlib2013.bib
@@ -1,11 +1,11 @@
-@ARTICLE { kelly-dlib2013,
-    AUTHOR = { Mat Kelly and Justin F. Brunelle and Michele C. Weigle and Michael L. Nelson },
-    TITLE = { A Method for Identifying Personalized Representations in the Archives },
-    URL = { http://www.dlib.org/dlib/november13/kelly/11kelly.html },
-    JOURNAL = { D-Lib Magazine },
-    YEAR = { 2013 },
-    VOLUME = { 19 },
-    NUMBER = { 11/12 },
-    MONTH = { Nov/Dec },
-    PUBDATE = { 201311 },
+@article{kelly-dlib2013,
+  author        = {Mat Kelly and Justin F. Brunelle and Michele C. Weigle and Michael L. Nelson},
+  title         = {A Method for Identifying Personalized Representations in the Archives},
+  url           = {http://www.dlib.org/dlib/november13/kelly/11kelly.html},
+  journal       = {D-Lib Magazine},
+  year          = {2013},
+  volume        = {19},
+  number        = {11/12},
+  month         = {Nov/Dec},
+  pubdate       = {201311}
 }
