--- a/publications/kelly-jcdl2015.bib
+++ b/publications/kelly-jcdl2015.bib
@@ -1,8 +1,8 @@
-@MISC { kelly-jcdl2015,
-    AUTHOR = {Mat Kelly},
-    TITLE = {{A Framework for Aggregating Private and Public Web Archives}},
-    HOWPUBLISHED = {{ACM/IEEE Joint Conference on Digital Libraries (JCDL). Doctoral Consortium}},
-    MONTH = {June},
-    YEAR = {2015},
-    NOTE = {Knoxville, Tennessee}
+@misc{kelly-jcdl2015,
+  author        = {Mat Kelly},
+  title         = {{A Framework for Aggregating Private and Public Web Archives}},
+  howpublished  = {{ACM/IEEE Joint Conference on Digital Libraries (JCDL). Doctoral Consortium}},
+  month         = {June},
+  year          = {2015},
+  note          = {Knoxville, Tennessee}
 }
